salesforce_ant_45.0/sample/codepkg/objects/Central_Product__c.object
<CustomObject>
    <fields>
        <fullName>Added_To_Cart__c</fullName>
        <label>Added To Cart</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bar_Code__c</fullName>
        <label>Bar Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <label>Brand Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstCategory__c</fullName>
        <label>FirstCategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacture_Name__c</fullName>
        <label>Manufacture Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mongo_Id__c</fullName>
        <label>Mongo Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <label>Product Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <label>Product SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondCategory__c</fullName>
        <label>SecondCategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Central Products</relationshipLabel>
        <relationshipName>Central_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ThirdCategory__c</fullName>
        <label>ThirdCategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Views__c</fullName>
        <label>Views</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Central Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand_Name__c</columns>
        <columns>FirstCategory__c</columns>
        <columns>SecondCategory__c</columns>
        <columns>Product_SKU__c</columns>
        <columns>Status__c</columns>
        <columns>Manufacture_Name__c</columns>
        <columns>Product_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Central_Product_View</fullName>
        <columns>NAME</columns>
        <columns>Brand_Name__c</columns>
        <columns>FirstCategory__c</columns>
        <columns>SecondCategory__c</columns>
        <columns>Product_SKU__c</columns>
        <columns>Status__c</columns>
        <columns>Manufacture_Name__c</columns>
        <columns>Product_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>Central_Product_View</label>
    </listViews>
    <nameField>
        <label>Central Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Central Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>